Add --add-opens jvm flag for robolectric tests